--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ install:
   - "pip install -r requirements.txt"
   - "pip install coveralls"
 
-  
-after_success:
-  coveralls
 script:
-- nosetests  --with-coverage --cover-package=app
+- script: nosetests --with-coverage --cover-package=app && coverage report
+after_success:
+  -coveralls
