--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
   - "pip install coveralls"
 
 script:
-- script: nosetests --with-coverage --cover-package=app && coverage report
+- script: nosetests --with-coverage --cover-package=app 
 after_success:
   -coveralls
