--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ install:
   - "pip install -r requirements.txt"
   - "pip install coveralls"
 
+script:
+- nosetests --with-coverage --cover-package=app 
 
 after_success:
-  coveralls
-script:
-- nosetests --with-coverage --cover-package=app && coverage report
+- coveralls
+
 
