--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==0.9.9
 asn1crypto==0.24.0
 astroid==1.6.1
 backports.functools-lru-cache==1.5
@@ -26,6 +27,7 @@ Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 futures==3.2.0
+gunicorn==19.7.1
 html5lib==1.0.1
 idna==2.6
 ipaddress==1.0.19
@@ -58,4 +60,4 @@ visitor==0.1.3
 webencodings==0.5.1
 Werkzeug==0.13
 wrapt==1.10.11
-
+WTForms==2.1
