--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
-sudo: true
 language: python
 python:
-  - "2.7"
+  - "3.5.2"
 install:
-  - "pip install -r requirements.txt"
-  - "pip install coveralls"
-notifications:
-  webhooks: https://coveralls.io/webhook?repo_token=9Ly8I0luviI24fcVw1WT3nosffrDhin9N
+  - pip install -r requirements.txt
+  - pip install coveralls
 
-script:
-- nosetests --with-coverage --cover-package=app 
+script: 
+  - nosetests --with-coverage --cover-package=app
+
 
 after_success:
 - coveralls
-
 
