--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2018.1.18
 cffi==1.11.4
 chardet==3.0.4
 click==6.7
+codacy-coverage==1.3.11
 configparser==3.5.0
 coverage==4.5.1
 coveralls==1.2.0
