--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,35 @@
 alembic==0.9.9
 asn1crypto==0.24.0
-astroid==1.6.1
-backports.functools-lru-cache==1.5
-bleach==2.1.2
-blinker==1.4
 certifi==2018.1.18
-cffi==1.11.4
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
-codacy-coverage==1.3.11
-configparser==3.5.0
 coverage==4.5.1
-coveralls==1.2.0
-cryptography==1.7.2
+coveralls==1.3.0
+cryptography==1.9
 docopt==0.6.2
-dominate==2.3.1
-enum34==1.1.6
 Flask==0.12.2
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
+Flask-API==1.0
+Flask-Cors==3.0.3
 Flask-Migrate==2.1.1
-Flask-Moment==0.6.0
-Flask-PageDown==0.2.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
-Flask-WTF==0.14.2
-futures==3.2.0
 gunicorn==19.7.1
-html5lib==1.0.1
 idna==2.6
-ipaddress==1.0.19
-isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
-jwt==0.5.2
-lazy-object-proxy==1.3.1
+jwt==0.5.3
 Mako==1.0.7
-Markdown==2.6.11
 MarkupSafe==1.0
-mccabe==0.6.1
-migrate==0.3.8
-MySQL-python==1.2.5
+mysqlclient==1.3.12
 nose==1.3.7
-pyasn1==0.4.2
 pycparser==2.18
-PyJWT==1.6.0
-pylint==1.8.2
-pyOpenSSL==17.5.0
-python-dateutil==2.6.1
+python-dateutil==2.7.2
 python-editor==1.0.3
 requests==2.18.4
-singledispatch==3.4.0.3
 six==1.11.0
-SQLAlchemy==1.1.15
+SQLAlchemy==1.2.6
 typing==3.5.3.0
 urllib3==1.22
-visitor==0.1.3
-webencodings==0.5.1
-Werkzeug==0.13
-wrapt==1.10.11
-WTForms==2.1
+Werkzeug==0.14.1
