--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 sudo: true
 language: python
 python:
-  - "3.4"
-  - "3.5"
-  - "3.6"
+  - "3.4.3"
 install:
   - "pip install -r requirements.txt"
   - "pip install coveralls"
+
+notifications:
+  webhooks: https://coveralls.io/webhook?repo_token=WFONVFyr47aUrsVvUaIa0PpFJMVbDrGbf
 
 script:
 - nosetests --with-coverage --cover-package=app 
 
 after_success:
 - coveralls
-
 
