--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==0.9.9
 asn1crypto==0.24.0
 astroid==1.6.2
 certifi==2018.1.18
@@ -10,9 +11,12 @@ cryptography==1.9
 docopt==0.6.2
 Flask==0.12.2
 Flask-API==1.0
+Flask-Cors==3.0.3
 Flask-JWT==0.3.2
 Flask-JWT-Extended==3.7.2
+Flask-Migrate==2.1.1
 Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
 gunicorn==19.7.1
 idna==2.6
@@ -27,10 +31,13 @@ mccabe==0.6.1
 mysqlclient==1.3.12
 nose==1.3.7
 pycparser==2.18
+PyJWT==1.4.2
+pylint==1.8.3
 python-dateutil==2.7.2
 python-editor==1.0.3
 requests==2.18.4
 six==1.11.0
+SQLAlchemy==1.2.6
 typing==3.5.3.0
 urllib3==1.22
 Werkzeug==0.14.1
